--- a/.github/workflows/deployArmTemplate.yml
+++ b/.github/workflows/deployArmTemplate.yml
@@ -20,12 +20,12 @@ jobs:
     - name: Login to Azure
       uses: azure/login@v1
       with:
-        creds: ${ secrets.AZURE_CREDENTIALS }
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Deploy ARM Template
       uses: azure/arm-deploy@v1
       with:
         scope: resourcegroup
-        subscriptionId: ${ env.AZURE_SUBSCRIPTION_ID }
-        resourceGroupName: ${ env.AZURE_RESOURCE_GROUP }
+        subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
+        resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
         template: ./azuredeploy.json
